--- a/foliac/index.html
+++ b/foliac/index.html
@@ -24,7 +24,8 @@
         <p>un template psd simple et gratuit</p>
         <button>mes travaux</button>
     </header>
-    <section class="filters side-padding">
+
+    <section class="portfolio side-padding">
         <ul>
             <li>
                 <button>Tous les projets</button>
@@ -43,25 +44,26 @@
                 <button>Motion design</button>
             </li>
         </ul>
-        <div class="filters-images">
+
+        <div class="portfolio-images">
             <div class="row clearfix">
                 <div class="img-wrapper small">
-                    <img src="img/filter3.jpg" alt=""/>
+                    <img src="img/portfolio3.jpg" alt=""/>
                     <div class="cover"></div>
                 </div>
                 <div class="img-wrapper big">
-                    <img src="img/filter4.jpg" alt=""/>
+                    <img src="img/portfolio4.jpg" alt=""/>
                     <div class="cover"></div>
                 </div>
             </div>
 
             <div class="row clearfix">
                 <div class="img-wrapper big">
-                    <img src="img/filter2.jpg" alt=""/>
+                    <img src="img/portfolio2.jpg" alt=""/>
                     <div class="cover"></div>
                 </div>
                 <div class="img-wrapper small">
-                    <img src="img/filter1.jpg" alt=""/>
+                    <img src="img/portfolio1.jpg" alt=""/>
                     <div class="cover">
                         <div>
                             <h4>Forest app</h4>
@@ -70,33 +72,56 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="filters-images flex">
-
-                <div class="img-wrapper small flex-image">
-                    <img src="img/filter3.jpg" alt=""/>
-                    <div class="cover"></div>
-                </div>
-                <div class="img-wrapper big flex-image">
-                    <img src="img/filter4.jpg" alt=""/>
-                    <div class="cover"></div>
-                </div>
-
-                <div class="img-wrapper big flex-image">
-                    <img src="img/filter2.jpg" alt=""/>
-                    <div class="cover"></div>
-                </div>
-                <div class="img-wrapper small flex-image">
-                    <img src="img/filter1.jpg" alt=""/>
-                    <div class="cover">
-                        <div>
-                            <h4>Forest app</h4>
-                            <p>application mobile</p>
-                        </div>
-                    </div>
-                </div>
         </div>
     </section>
+
+    <section class="about side-padding clearfix">
+        <div>
+            <h3>Michel Dupont</h3>
+            <p>Webdesigner, illustrateur, auteur</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+                in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+            <button>me contacter</button>
+        </div>
+    </section>
+
+    <section class="contact side-padding">
+        <h3>Me Contacter</h3>
+
+        <form>
+            <div class="row clearfix">
+                <div class="input-wrapper">
+                    <div class="input-icon user"></div>
+                    <input type="text" placeholder="Votre nom">
+                </div>
+                <div class="input-wrapper">
+                    <div class="input-icon mail"></div>
+                    <input type="email" placeholder="Votre email">
+                </div>
+            </div>
+
+            <div class="row input-wrapper">
+                <div class="input-icon crayon"></div>
+                <textarea placeholder="Votre message" rows="10"></textarea>
+            </div>
+
+            <button type="submit">Envoyer</button>
+        </form>
+    </section>
+
+    <footer class="side-padding clearfix">
+        <p>Copyright &copy; 2015 by beneggen - www.beneggen.fr</p>
+        <ul>
+            <li><div class="hexagon twitter"></div></li>
+            <li><div class="hexagon linkedin"></div></li>
+            <li><div class="hexagon dribble"></div></li>
+            <li><div class="hexagon behance"></div></li>
+        </ul>
+    </footer>
 </body>
 </html>
