Cahee initial commit

--- a/cahee/index.html
+++ b/cahee/index.html
@@ -3,8 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
+    <section class="fresh-life">
+        <div class="container">
+            <nav class="clearfix">
+                <h1><a href="#">Cahee</a></h1>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
 
+            <div class="content">
+                <h2>Fresh Life</h2>
+                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+                </p>
+                <button>GET FREE NOW</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
