--- a/cahee/index.html
+++ b/cahee/index.html
@@ -30,6 +30,25 @@
                 <button>GET FREE NOW</button>
             </div>
         </div>
+
+        <a class="scroll" href="#">
+            <img src="img/scroll.png" alt="scroll">
+        </a>
     </section>
+
+    <section class="about">
+        <div class="container clearfix">
+            <div class="content">
+                <h2>About Us</h2>
+                <p>Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
+                </p>
+                <p>Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                    laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.
+                </p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
