--- a/cahee/index.html
+++ b/cahee/index.html
@@ -31,12 +31,12 @@
             </div>
         </div>
 
-        <a class="scroll" href="#">
+        <a class="scroll" href="#about">
             <img src="img/scroll.png" alt="scroll">
         </a>
     </section>
 
-    <section class="about">
+    <section id="about" class="about">
         <div class="container clearfix">
             <div class="content">
                 <h2>About Us</h2>
@@ -50,5 +50,38 @@
         </div>
     </section>
 
+    <section class="services">
+        <div class="container">
+            <div>
+                <div class="services-button">
+                    <a href="#">
+                        <span>Online Shopping</span>
+                        <img src="img/icon-cart.png" alt="cart">
+                    </a>
+                </div>
+                <div class="services-button">
+                    <a href="#">
+                        <span>Quality Product</span>
+                        <img src="img/icon-plant.png" alt="cart">
+                    </a>
+                </div>
+                <div class="services-button">
+                    <a href="#">
+                        <span>Domestic & International Delivery</span>
+                        <img src="img/icon-world.png" alt="cart">
+                    </a>
+                </div>
+                <div class="services-button">
+                    <a href="#">
+                        <span>Well Organized</span>
+                        <img src="img/icon-carrot.png" alt="cart">
+                    </a>
+                </div>
+            </div>
+            <div>
+                <h2>Our Services</h2>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
