--- a/cahee/index.html
+++ b/cahee/index.html
@@ -55,29 +55,38 @@
             <div>
                 <div class="services-button">
                     <a href="#">
-                        <span>Online Shopping</span>
-                        <img src="img/icon-cart.png" alt="cart">
+                        <p>Online Shopping</p>
+                        <div class="image-wrapper">
+                            <img src="img/icon-cart.png" alt="cart">
+                        </div>
                     </a>
                 </div>
                 <div class="services-button">
                     <a href="#">
-                        <span>Quality Product</span>
-                        <img src="img/icon-plant.png" alt="cart">
+                        <p>Quality Product</p>
+                        <div class="image-wrapper">
+                            <img src="img/icon-plant.png" alt="cart">
+                        </div>
                     </a>
                 </div>
                 <div class="services-button">
                     <a href="#">
-                        <span>Domestic & International Delivery</span>
-                        <img src="img/icon-world.png" alt="cart">
+                        <p>Domestic & International Delivery</p>
+                        <div class="image-wrapper">
+                            <img src="img/icon-world.png" alt="cart">
+                        </div>
                     </a>
                 </div>
                 <div class="services-button">
                     <a href="#">
-                        <span>Well Organized</span>
-                        <img src="img/icon-carrot.png" alt="cart">
+                        <p>Well Organized</p>
+                        <div class="image-wrapper">
+                            <img src="img/icon-carrot.png" alt="cart">
+                        </div>
                     </a>
                 </div>
             </div>
+
             <div>
                 <h2>Our Services</h2>
             </div>
