some more content

--- a/cahee/index.html
+++ b/cahee/index.html
@@ -92,5 +92,39 @@
             </div>
         </div>
     </section>
+
+    <section class="gallery">
+        <div class="container">
+            <h2>Gallery</h2>
+            <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+
+            <div class="grid-container">
+
+            </div>
+
+            <button>View more</button>
+        </div>
+    </section>
+
+    <section class="subscribe">
+        <div class="container">
+            <h3>Subscribe to us</h3>
+            <p>Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua. Ut enim ad minim veniam.
+            </p>
+            <form>
+                <input type="text" placeholder="Your email address...">
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <p>© 2015 Company. All right reserved.</p>
+        <p class="logo">Cahee</p>
+        <p>Made with <span>love</span> by Auskteez</p>
+    </footer>
 </body>
 </html>
