--- a/cahee/index.html
+++ b/cahee/index.html
@@ -100,8 +100,33 @@
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
 
-            <div class="grid-container">
+            <div class="my-grid-container">
+                <div class="my-grid-row">
+                    <div class="my-grid-cell-2-3">
+                        <img src="img/gallery-1.jpg" alt="gallery1">
+                    </div>
+                    <div class="my-grid-cell-1-3 small-grid">
+                        <div class="my-grid-row">
+                            <div class="my-grid-cell-1-1">
+                                <img src="img/gallery-2.jpg" alt="gallery2">
+                            </div>
+                        </div>
+                        <div class="my-grid-row">
+                            <div class="my-grid-cell-1-1">
+                                <img src="img/gallery-3.jpg" alt="gallery3">
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="my-grid-row">
+                    <div class="my-grid-cell-1-2">
+                        <img src="img/gallery-4.jpg" alt="gallery4">
+                    </div>
+                    <div class="my-grid-cell-1-2">
+                        <img src="img/gallery-5.jpg" alt="gallery5">
+                    </div>
+                </div>
             </div>
 
             <button>View more</button>
@@ -114,17 +139,71 @@
             <p>Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam.
             </p>
-            <form>
-                <input type="text" placeholder="Your email address...">
+            <form class="clearfix">
+                <input type="email" placeholder="Your email address...">
                 <button type="submit">Subscribe</button>
             </form>
         </div>
     </section>
 
+    <section class="blog">
+        <div class="container">
+            <h2>Blog</h2>
+            <p>Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
+            </p>
+
+            <div class="my-grid-container">
+                <div class="my-grid-row">
+                    <div class="my-grid-cell-1-3">
+                        <div class="blog-image-wrapper">
+                            <img src="img/blog-1.jpg" alt="blog1">
+                            <div class="date">
+                                20<br>NOV
+                            </div>
+                            <div class="text">
+                                <p>Green Smoothies: Too Much of a Good Thing?</p>
+                                <p><small>By Auskteez - 2 hours ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="my-grid-cell-1-3">
+                        <div class="blog-image-wrapper">
+                            <img src="img/blog-2.jpg" alt="blog2">
+                            <div class="date">
+                                14<br>NOV
+                            </div>
+                            <div class="text">
+                                <p>Growing Food and a “Thirst” for Innovation</p>
+                                <p><small>By Auskteez - 3 hours ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="my-grid-cell-1-3">
+                        <div class="blog-image-wrapper">
+                            <img src="img/blog-3.jpg" alt="blog3">
+                            <div class="date">
+                                10<br>NOV
+                            </div>
+                            <div class="text">
+                                <p>Pesticides & Food: What You Need to Know</p>
+                                <p><small>By Auskteez - 6 hours ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <button>View more</button>
+        </div>
+    </section>
+
     <footer>
-        <p>© 2015 Company. All right reserved.</p>
-        <p class="logo">Cahee</p>
-        <p>Made with <span>love</span> by Auskteez</p>
+        <div class="container">
+            <p>© 2015 Company. All right reserved.</p>
+            <p class="logo">Cahee</p>
+            <p>Made with <span>love</span> by Auskteez</p>
+        </div>
     </footer>
 </body>
 </html>
