--- a/cahee/index.html
+++ b/cahee/index.html
@@ -158,6 +158,7 @@
                     <div class="my-grid-cell-1-3">
                         <div class="blog-image-wrapper">
                             <img src="img/blog-1.jpg" alt="blog1">
+                            <div class="overlay"></div>
                             <div class="date">
                                 20<br>NOV
                             </div>
@@ -167,9 +168,11 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="my-grid-cell-1-3">
                         <div class="blog-image-wrapper">
                             <img src="img/blog-2.jpg" alt="blog2">
+                            <div class="overlay"></div>
                             <div class="date">
                                 14<br>NOV
                             </div>
@@ -179,9 +182,68 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="my-grid-cell-1-3">
                         <div class="blog-image-wrapper">
                             <img src="img/blog-3.jpg" alt="blog3">
+                            <div class="overlay"></div>
+                            <div class="date">
+                                10<br>NOV
+                            </div>
+                            <div class="text">
+                                <p>Pesticides & Food: What You Need to Know</p>
+                                <p><small>By Auskteez - 6 hours ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <button>View more</button>
+        </div>
+    </section>
+
+    <section class="contact">
+        <div class="container">
+            <h2>Contact</h2>
+            <p>Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
+            </p>
+
+            <div class="my-grid-container">
+                <div class="my-grid-row">
+                    <div class="my-grid-cell-1-3">
+                        <div class="blog-image-wrapper">
+                            <img src="img/blog-1.jpg" alt="blog1">
+                            <div class="overlay"></div>
+                            <div class="date">
+                                20<br>NOV
+                            </div>
+                            <div class="text">
+                                <p>Green Smoothies: Too Much of a Good Thing?</p>
+                                <p><small>By Auskteez - 2 hours ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="my-grid-cell-1-3">
+                        <div class="blog-image-wrapper">
+                            <img src="img/blog-2.jpg" alt="blog2">
+                            <div class="overlay"></div>
+                            <div class="date">
+                                14<br>NOV
+                            </div>
+                            <div class="text">
+                                <p>Growing Food and a “Thirst” for Innovation</p>
+                                <p><small>By Auskteez - 3 hours ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="my-grid-cell-1-3">
+                        <div class="blog-image-wrapper">
+                            <img src="img/blog-3.jpg" alt="blog3">
+                            <div class="overlay"></div>
                             <div class="date">
                                 10<br>NOV
                             </div>
