--- a/cahee/index.html
+++ b/cahee/index.html
@@ -206,65 +206,49 @@
     <section class="contact">
         <div class="container">
             <h2>Contact</h2>
-            <p>Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
-            </p>
+            <p>For new projects, ideas, business or anything you'd like to discuss, contact with me!</p>
 
             <div class="my-grid-container">
                 <div class="my-grid-row">
-                    <div class="my-grid-cell-1-3">
-                        <div class="blog-image-wrapper">
-                            <img src="img/blog-1.jpg" alt="blog1">
-                            <div class="overlay"></div>
-                            <div class="date">
-                                20<br>NOV
-                            </div>
-                            <div class="text">
-                                <p>Green Smoothies: Too Much of a Good Thing?</p>
-                                <p><small>By Auskteez - 2 hours ago</small></p>
-                            </div>
-                        </div>
+                    <div class="my-grid-cell-1-2">
+                        <form>
+                            <input type="text" value="Auskteez Tran">
+                            <input type="email" placeholder="Your email...">
+                            <input type="text" placeholder="Your phone number...">
+                            <textarea placeholder="Your message..."></textarea>
+                        </form>
                     </div>
 
-                    <div class="my-grid-cell-1-3">
-                        <div class="blog-image-wrapper">
-                            <img src="img/blog-2.jpg" alt="blog2">
-                            <div class="overlay"></div>
-                            <div class="date">
-                                14<br>NOV
-                            </div>
-                            <div class="text">
-                                <p>Growing Food and a “Thirst” for Innovation</p>
-                                <p><small>By Auskteez - 3 hours ago</small></p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="my-grid-cell-1-3">
-                        <div class="blog-image-wrapper">
-                            <img src="img/blog-3.jpg" alt="blog3">
-                            <div class="overlay"></div>
-                            <div class="date">
-                                10<br>NOV
-                            </div>
-                            <div class="text">
-                                <p>Pesticides & Food: What You Need to Know</p>
-                                <p><small>By Auskteez - 6 hours ago</small></p>
-                            </div>
-                        </div>
+                    <div class="my-grid-cell-1-2">
+                        <address>
+                            <p><b>ADDRESS</b></p>
+                            <p>123 City name, Street, City, Country</p>
+                            <p><b>EMAIL</b></p>
+                            <p>cahee@domain.com</p>
+                            <p><b>PHONE</b></p>
+                            <p>+012 345 6789</p>
+                        </address>
                     </div>
                 </div>
             </div>
-
-            <button>View more</button>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>© 2015 Company. All right reserved.</p>
-            <p class="logo">Cahee</p>
-            <p>Made with <span>love</span> by Auskteez</p>
+            <div class="my-grid-container">
+                <div class="my-grid-row">
+                    <div class="my-grid-cell-1-3">
+                        <p>© 2015 Company. All right reserved.</p>
+                    </div>
+                    <div class="my-grid-cell-1-3">
+                        <p class="logo">Cahee</p>
+                    </div>
+                    <div class="my-grid-cell-1-3">
+                        <p class="author">Made with <span>love</span> by Auskteez</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
