--- a/cahee/index.html
+++ b/cahee/index.html
@@ -52,7 +52,7 @@
 
     <section class="services">
         <div class="container">
-            <div>
+            <div class="services-buttons">
                 <div class="services-button">
                     <a href="#">
                         <p>Online Shopping</p>
