Cahee without float and inline-block

--- a/cahee/index.html
+++ b/cahee/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="fresh-life">
         <div class="container">
-            <nav class="clearfix">
+            <nav>
                 <h1><a href="#">Cahee</a></h1>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -37,7 +37,7 @@
     </section>
 
     <section id="about" class="about">
-        <div class="container clearfix">
+        <div class="container">
             <div class="content">
                 <h2>About Us</h2>
                 <p>Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -139,7 +139,7 @@
             <p>Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam.
             </p>
-            <form class="clearfix">
+            <form>
                 <input type="email" placeholder="Your email address...">
                 <button type="submit">Subscribe</button>
             </form>
