--- a/foliac/index.html
+++ b/foliac/index.html
@@ -45,30 +45,31 @@
             </li>
         </ul>
 
-        <div class="portfolio-images">
-            <div class="row clearfix">
-                <div class="img-wrapper small">
-                    <img src="img/portfolio3.jpg" alt=""/>
-                    <div class="cover"></div>
-                </div>
-                <div class="img-wrapper big">
-                    <img src="img/portfolio4.jpg" alt=""/>
-                    <div class="cover"></div>
-                </div>
+        <div class="portfolio-images-masonry"
+             data-masonry='{"itemSelector": ".img-wrapper", "columnWidth": ".grid-sizer", "percentPosition": true }'>
+            <div class="grid-sizer"></div>
+
+            <div class="img-wrapper">
+                <img src="img/portfolio3.jpg" alt=""/>
+                <div class="cover"></div>
             </div>
 
-            <div class="row clearfix">
-                <div class="img-wrapper big">
-                    <img src="img/portfolio2.jpg" alt=""/>
-                    <div class="cover"></div>
-                </div>
-                <div class="img-wrapper small">
-                    <img src="img/portfolio1.jpg" alt=""/>
-                    <div class="cover">
-                        <div>
-                            <h4>Forest app</h4>
-                            <p>application mobile</p>
-                        </div>
+            <div class="img-wrapper">
+                <img src="img/portfolio4.jpg" alt=""/>
+                <div class="cover"></div>
+            </div>
+
+            <div class="img-wrapper">
+                <img src="img/portfolio2.jpg" alt=""/>
+                <div class="cover"></div>
+            </div>
+
+            <div class="img-wrapper">
+                <img src="img/portfolio1.jpg" alt=""/>
+                <div class="cover">
+                    <div>
+                        <h4>Forest app</h4>
+                        <p>application mobile</p>
                     </div>
                 </div>
             </div>
@@ -123,5 +124,6 @@
             <li><div class="hexagon behance"></div></li>
         </ul>
     </footer>
+    <<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 </body>
 </html>
