--- a/foliac/index.html
+++ b/foliac/index.html
@@ -33,7 +33,6 @@
             <li>
                 <button data-filter=".webdesign">Webdesign</button>
             </li>
-
             <li>
                 <button data-filter=".ui-ux">UI/UX design</button>
             </li>
@@ -47,6 +46,7 @@
 
         <div class="portfolio-images">
             <div class="grid-sizer"></div>
+
             <div class="img-wrapper projects webdesign illustration">
                 <img src="img/portfolio3.jpg" alt=""/>
                 <div class="cover"></div>
@@ -70,6 +70,26 @@
                         <p>application mobile</p>
                     </div>
                 </div>
+            </div>
+
+            <div class="img-wrapper projects webdesign ui-ux">
+                <img src="img/blog-1.jpg" alt=""/>
+                <div class="cover"></div>
+            </div>
+
+            <div class="img-wrapper projects motion">
+                <img src="img/blog-2.jpg" alt=""/>
+                <div class="cover"></div>
+            </div>
+
+            <div class="img-wrapper projects illustration ui-ux">
+                <img src="img/blog-3.jpg" alt=""/>
+                <div class="cover"></div>
+            </div>
+
+            <div class="img-wrapper projects webdesign">
+                <img src="img/gallery-1.jpg" alt=""/>
+                <div class="cover"></div>
             </div>
         </div>
     </section>
