Foliac - menu-button; cahee - gulp

--- a/foliac/index.html
+++ b/foliac/index.html
@@ -15,12 +15,18 @@
             <div class="logo">
                 <img src="img/foliac-logo.png" alt="foliac logo"/>
             </div>
-            <ul>
+            <ul id="top-menu">
                 <li><a href="#">Accueil</a><span>/</span></li>
                 <li><a href="#portfolio">Portfolio</a><span>/</span></li>
                 <li><a href="#about">About</a><span>/</span></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <button class="menu-button" data-menu-id="#top-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </nav>
 
         <div id="slider">
