--- a/homepage/index.html
+++ b/homepage/index.html
@@ -39,19 +39,74 @@
         </div>
 
         <div class="container-fluid">
-            <div class="row">
+            <div class="row relative">
                 <div class="col-md-5">
                     <img class="img-responsive" src="img/header_image.jpg" alt="">
                 </div>
                 <div class="col-md-6 col-md-offset-1">
-                    <h2>HISTORY OF AGENCY</h2>
+                    <h2 class="green-underline">HISTORY OF AGENCY</h2>
                     <p>
                         Porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi modi tempora incidunt ut labore.
                     </p>
                 </div>
+                <button class="btn btn-green text-uppercase btn-absolute">Read more</button>
             </div>
         </div>
     </header>
+    <div class="container-fluid">
+        <section id="chooseUs">
+            <div class="header-container">
+                <h2 class="green-underline">Why choose us</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h4>unlimited options</h4>
+                        </div>
+                        <div class="col-sm-6">
+                            <h4>DESIGN & DEVELOPMENT</h4>
+                        </div>
+                        <div class="col-sm-6">
+                            <h4>e-commerce</h4>
+                        </div>
+                        <div class="col-sm-6">
+                            <h4>CUSTOMIZABLE DESIGN</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5 col-md-offset-1 hidden-xs hidden-sm">
+                    <img class="img-responsive" src="img/about.jpg" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section id="portfolio">
+            <div class="header-container">
+                <h2 class="green-underline">our portfolio</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-2">
+                    <h2>choose category</h2>
+                    <ul class="filter-menu list-unstyled">
+                        <li class="active"><span>All</span></li>
+                        <li><span>webdesign</span></li>
+                        <li><span>graphic design</span></li>
+                        <li><span>fashion</span></li>
+                        <li><span>Logo design</span></li>
+                        <li><span>Advertising</span></li>
+                    </ul>
+                </div>
+                <div class="col-sm-10">
+
+                </div>
+            </div>
+        </section>
+    </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
