--- a/homepage/index.html
+++ b/homepage/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <title>AKAD.</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:600|Open+Sans" rel="stylesheet">
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default max-width">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -38,23 +39,26 @@
             </p>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid max-width">
             <div class="row relative">
                 <div class="col-md-5">
-                    <img class="img-responsive" src="img/header_image.jpg" alt="">
+                    <img class="img-responsive margin-negative" src="img/header_image.jpg" alt="">
                 </div>
                 <div class="col-md-6 col-md-offset-1">
                     <h2 class="green-underline">HISTORY OF AGENCY</h2>
                     <p>
-                        Porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi modi tempora incidunt ut labore.
+                        Porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
+                        non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
+                        ut aliquid ex ea commodi modi tempora incidunt ut labore.
                     </p>
                 </div>
                 <button class="btn btn-green text-uppercase btn-absolute">Read more</button>
             </div>
         </div>
     </header>
-    <div class="container-fluid">
-        <section id="chooseUs">
+
+        <section id="chooseUs" class="container-fluid max-width">
             <div class="header-container">
                 <h2 class="green-underline">Why choose us</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -64,16 +68,44 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-sm-6">
+                            <i class="ion-ios-infinite-outline"></i>
                             <h4>unlimited options</h4>
+                            <ul class="list-unstyled">
+                                <li>Branding</li>
+                                <li>Design & Copywriting</li>
+                                <li>Concept development</li>
+                                <li>User Experience</li>
+                            </ul>
                         </div>
                         <div class="col-sm-6">
+                            <i class="ion-ios-shuffle"></i>
                             <h4>DESIGN & DEVELOPMENT</h4>
+                            <ul class="list-unstyled">
+                                <li>Information architecture</li>
+                                <li>Interface design</li>
+                                <li>Product Design</li>
+                                <li>Integrated ad Companies</li>
+                            </ul>
                         </div>
                         <div class="col-sm-6">
+                            <i class="ion-ios-cart-outline"></i>
                             <h4>e-commerce</h4>
+                            <ul class="list-unstyled">
+                                <li>Prototyping</li>
+                                <li>Technical Consulting</li>
+                                <li>Web applications</li>
+                                <li>Quality testing</li>
+                            </ul>
                         </div>
                         <div class="col-sm-6">
+                            <i class="ion-ios-settings"></i>
                             <h4>CUSTOMIZABLE DESIGN</h4>
+                            <ul class="list-unstyled">
+                                <li>Information architecture</li>
+                                <li>Interface design</li>
+                                <li>Product Design</li>
+                                <li>Integrated ad Companies</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -83,7 +115,7 @@
             </div>
         </section>
 
-        <section id="portfolio">
+        <section id="portfolio" class="container-fluid max-width">
             <div class="header-container">
                 <h2 class="green-underline">our portfolio</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -102,12 +134,72 @@
                     </ul>
                 </div>
                 <div class="col-sm-10">
-
+                    <img src="img/Layer_5.jpg" alt="">
+                    <img src="img/Layer_6.jpg" alt="">
+                    <img src="img/Layer_7.jpg" alt="">
+                    <img src="img/Layer_8.jpg" alt="">
+                    <img src="img/Layer_9.jpg" alt="">
+                    <img src="img/Layer_10.jpg" alt="">
+                    <img src="img/Layer_11.jpg" alt="">
+                    <img src="img/Layer_14.jpg" alt="">
+                    <img src="img/Layer_13.jpg" alt="">
                 </div>
             </div>
         </section>
-    </div>
+        <section id="contact">
+            <div class="container-fluid max-width">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h2 class="text-inverse">YOU THINK WE'RE COOL ? LET'S WORK TOGETHER</h2>
+                        <button class="btn btn-green btn-inverse">Get in touch</button>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="white-bg">
+                            <h3>STAY INFORMED WITH OUR NEWSLETTER</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua.
+                            </p>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="YOUR EMAIL">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-green" type="button">Send</button>
+                                </span>
+                            </div><!-- /input-group -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class="container-fluid max-width">
+            <div class="row">
+                <div class="col-sm-7">
+                    <ul class="list-inline bottom-menu">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">services</a></li>
+                        <li><a href="#">portfolio</a></li>
+                        <li><a href="#">blog</a></li>
+                        <li><a href="#">contact us</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-5 text-right">
+                    <p>Created by akhouad 2016. All Rights Reserved</p>
+                </div>
+            </div>
+            <div class="clearfix">
+                <ul class="list-inline pull-right">
+                    <li><a href="#" target="_blank"><i class="ion-social-facebook"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="ion-social-twitter"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="ion-social-youtube"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="ion-social-linkedin"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="ion-social-pinterest"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="ion-social-instagram"></i></a></li>
+                </ul>
+            </div>
+        </footer>
+    <input type="file" name="file" maxlength="1">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 </body>
 </html>
